@@ -1,5 +1,10 @@
 2007-10-28  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-style.c: (changed_on_disk_cb): add support for live cursor
+	theme updates
+
+2007-10-28  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-style.c: (changed_on_disk_cb):
 	* appearance-themes.c: (theme_changed_on_disk_cb): adapt to changes in
 	theme change notification
